# ml_tuning

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
baseline_data_infra/: 1_batch_tuning_yaml_generator.py  2_run_all_tensile_yaml.sh  analyze_params.py  gflops_data_collect.py  heatmap.py
config_generator/: README.md  llm.py  main.py  requirements.txt  utils.py
config_generator/docs/: problem_size.md  prompt_strategy.md  structured_output.md
config_generator/prompts/: format.py  gpu_spec.py  template.py
kernel-bench/: README.md  requirements.txt
kernel-bench/patches/: add-ollama-server.patch
ml_predictor/: README.md
ml_predictor/data_collection/: 1_batch_tuning_yaml_generator.py  2_run_all_tensile_yaml.sh  3_data_gflops_data_collect.py  README.md  problem_csv_gen.py  requirements.txt
ml_predictor/train_mi/: README.md  regression.py
ml_predictor/train_mi/dataset/: merge.py
ml_predictor/train_mi/regression_base/: callbacks.py  main.py  utils.py
predictor/: xgboost_predictor.py
qimeng-gemm/: README.md
qimeng-gemm/code/: Makefile  gemm.cpp  gemm.hpp  main.cpp
qimeng-gemm/meta-prompts/: tiling.md
qimeng-gemm/src/: main.py
script/: plot_problems_in_logic_yaml.py
train_mi/: README.md  regression.py  train_v1.py
train_mi/regression_base/: README.md  args.py  data_prepare.py  main.py  train.py
train_mi/tensile_process_speedup/: .gitignore  README.md  predict_mi_and_config_gen.py  run_optimize_config_yaml_gen.sh  speedup_test_logic.yaml
tuning_yaml/: gemm_fp16_only_mi.yaml
(+24 files in other folders)
